fix: prevent sidebar from wrapping ugly

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .navbar {
     background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-6));
     height: 100vh;
-    min-width: 280px;
+    width: max-content;
     padding: var(--mantine-spacing-md);
     padding-bottom: 0;
     display: flex;
@@ -32,6 +32,7 @@
 }
 
 .footer {
+    width: max-content;
     margin-left: calc(var(--mantine-spacing-md) * -1);
     margin-right: calc(var(--mantine-spacing-md) * -1);
     border-top: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
